@@ -54,7 +54,7 @@
 		      <accelerator key="i" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image393">
+			<widget class="GtkImage" id="image401">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-new</property>
 			  <property name="icon_size">1</property>
@@ -77,7 +77,7 @@
 		      <accelerator key="i" modifiers="GDK_CONTROL_MASK | GDK_SHIFT_MASK" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image394">
+			<widget class="GtkImage" id="image402">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-open</property>
 			  <property name="icon_size">1</property>
@@ -102,6 +102,7 @@
 		      <property name="tooltip" translatable="yes">Import a file to the queue without add it to the list</property>
 		      <property name="label" translatable="yes">Import to queue</property>
 		      <property name="use_underline">True</property>
+		      <signal name="activate" handler="import_to_queue" last_modification_time="Thu, 22 Jun 2006 04:59:53 GMT"/>
 		      <accelerator key="o" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 		    </widget>
 		  </child>
@@ -132,7 +133,7 @@
 		      <accelerator key="j" modifiers="GDK_CONTROL_MASK | GDK_SHIFT_MASK" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image395">
+			<widget class="GtkImage" id="image403">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-jump-to</property>
 			  <property name="icon_size">1</property>
@@ -233,7 +234,7 @@
 		      <accelerator key="Right" modifiers="GDK_MOD1_MASK" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image396">
+			<widget class="GtkImage" id="image404">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-media-next</property>
 			  <property name="icon_size">1</property>
@@ -255,7 +256,7 @@
 		      <accelerator key="Left" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image397">
+			<widget class="GtkImage" id="image405">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-media-previous</property>
 			  <property name="icon_size">1</property>
@@ -279,7 +280,7 @@
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">None</property>
 		      <property name="use_underline">True</property>
-		      <property name="active">False</property>
+		      <property name="active">True</property>
 		      <signal name="activate" handler="toggle_control_none" last_modification_time="Tue, 30 May 2006 05:05:03 GMT"/>
 		    </widget>
 		  </child>
@@ -289,7 +290,7 @@
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">Shuffle</property>
 		      <property name="use_underline">True</property>
-		      <property name="active">False</property>
+		      <property name="active">True</property>
 		      <property name="group">none_sr</property>
 		      <signal name="activate" handler="toggle_control_shuffle" last_modification_time="Tue, 30 May 2006 05:05:03 GMT"/>
 		      <accelerator key="s" modifiers="GDK_CONTROL_MASK" signal="activate"/>
@@ -301,7 +302,7 @@
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">Repeat</property>
 		      <property name="use_underline">True</property>
-		      <property name="active">False</property>
+		      <property name="active">True</property>
 		      <property name="group">none_sr</property>
 		      <signal name="activate" handler="toggle_control_repeat" last_modification_time="Tue, 30 May 2006 05:05:03 GMT"/>
 		      <accelerator key="r" modifiers="GDK_CONTROL_MASK" signal="activate"/>
@@ -313,7 +314,7 @@
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">Shuffle + Repeat</property>
 		      <property name="use_underline">True</property>
-		      <property name="active">False</property>
+		      <property name="active">True</property>
 		      <property name="group">none_sr</property>
 		      <signal name="activate" handler="toggle_control_both_sr" last_modification_time="Tue, 30 May 2006 05:05:03 GMT"/>
 		    </widget>
@@ -816,21 +817,50 @@
 		  </child>
 
 		  <child>
-		    <widget class="GtkScrolledWindow" id="music_sw">
-		      <property name="height_request">100</property>
+		    <widget class="GtkHPaned" id="hpanebox">
 		      <property name="visible">True</property>
 		      <property name="can_focus">True</property>
-		      <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
-		      <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
-		      <property name="shadow_type">GTK_SHADOW_ETCHED_IN</property>
-		      <property name="window_placement">GTK_CORNER_TOP_LEFT</property>
 
 		      <child>
-			<placeholder/>
+			<widget class="GtkHBox" id="playerbox">
+			  <property name="width_request">400</property>
+			  <property name="height_request">400</property>
+			  <property name="visible">True</property>
+			  <property name="homogeneous">False</property>
+			  <property name="spacing">0</property>
+
+			  <child>
+			    <placeholder/>
+			  </child>
+			</widget>
+			<packing>
+			  <property name="shrink">True</property>
+			  <property name="resize">False</property>
+			</packing>
+		      </child>
+
+		      <child>
+			<widget class="GtkScrolledWindow" id="music_sw">
+			  <property name="height_request">100</property>
+			  <property name="visible">True</property>
+			  <property name="can_focus">True</property>
+			  <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+			  <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+			  <property name="shadow_type">GTK_SHADOW_ETCHED_IN</property>
+			  <property name="window_placement">GTK_CORNER_TOP_LEFT</property>
+
+			  <child>
+			    <placeholder/>
+			  </child>
+			</widget>
+			<packing>
+			  <property name="shrink">True</property>
+			  <property name="resize">True</property>
+			</packing>
 		      </child>
 		    </widget>
 		    <packing>
-		      <property name="shrink">False</property>
+		      <property name="shrink">True</property>
 		      <property name="resize">True</property>
 		    </packing>
 		  </child>
