@@ -4,6 +4,8 @@
 <glade-interface>
 
 <widget class="GtkWindow" id="mv_window">
+  <property name="width_request">400</property>
+  <property name="height_request">300</property>
   <property name="visible">True</property>
   <property name="title" translatable="yes">video player</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
